# anime-scrapper

./: .env.example  .gitignore  Cargo.toml
migrations/: 20241227000001_create_anime_updates.sql  20241227000002_create_completed_anime.sql  20241227000003_create_anime_details.sql  20241227000004_create_episodes.sql  20241227000005_create_video_sources.sql  20241227000006_create_cache_metadata.sql  20241227000007_create_users.sql  20241227000008_create_user_favorites.sql  20241227000009_create_user_subscriptions.sql  20241227000010_create_user_history.sql  20241227000011_create_crawled_anime.sql  20241227000012_create_verification_tokens.sql
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs
src/auth/: mod.rs
src/db/: mod.rs  repository.rs
src/email/: mod.rs
src/models/: mod.rs
src/parser/: mod.rs
src/routes/: auth.rs  mod.rs  user.rs
src/scraper/: mod.rs
