[package]
name = "anime-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
scraper = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
bcrypt = "0.16"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
urlencoding = "2"
thiserror = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2"
proptest = "1"
